--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,13 @@
         {
             "src": "./index.js",
             "use": "@vercel/node"
+        },
+        { "src": "*.html",
+          "use": "@vercel/static" 
+        },
+        {
+           "src": "*.json", 
+           "use": "@vercel/node" 
         }
     ],
     "routes": [
